opam-version: "2.0"
name: "menhirSdk"
version: "20200624"
synopsis: "Compile-time library for auxiliary tools related to Menhir"
maintainer: "francois.pottier@inria.fr"
authors: [
  "François Pottier <francois.pottier@inria.fr>"
  "Yann Régis-Gianas <yrg@pps.univ-paris-diderot.fr>"
]
homepage: "http://gitlab.inria.fr/fpottier/menhir"
bug-reports: "menhir@inria.fr"
depends: [
  "ocaml" {>= "4.02.3"}
  "dune" {>= "2.0.0"}
]
conflicts: [
  "menhir" {!= version}
]
build: ["dune" "build" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/dune-universe/menhir.git"
url {
  src: "git+https://github.com/dune-universe/menhir.git#duniverse-menhir.20200624"
} 
